# StaffingAgent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/api/: dependencies.py  router.py
app/api/routes/: health.py  workflows.py
app/core/: config.py
app/db/: session.py
app/db/models/: __init__.py  records.py
app/db/repositories/: messages.py  workflows.py
app/domain/: enums.py  schemas.py
app/integrations/graph/: __init__.py  client.py
app/integrations/llm/: __init__.py  openai_adapter.py
app/integrations/storage/: s3.py
app/services/: classification.py  extraction.py  health.py  intake.py  matching.py
app/workflows/: __init__.py
tests/: conftest.py  test_api.py  test_config.py
