[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-intake-matcher"
version = "0.1.0"
description = "Scaffold for an email intake and matching application."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alembic==1.14.1",
  "boto3==1.36.26",
  "fastapi==0.115.8",
  "httpx==0.28.1",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "psycopg[binary]==3.2.5",
  "python-dotenv==1.0.1",
  "sqlalchemy==2.0.38",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
